feature: adicionado tailwind css ao projeto; adicionado página home.

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/pages/api/app/database/database.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/pages/api/app/database/database.js", "src/lib/db.js", "src/app/api/getAllCategories.js"],
   "exclude": ["node_modules"]
 }
